--- a/TFCSD/PID/static/styles/controlador.css
+++ b/TFCSD/PID/static/styles/controlador.css
@@ -4,38 +4,196 @@
     padding: 0;
 }
 
+body{
+    width: 100%;
+    height: 100vh;
+}
+
 .container{
     padding: 2%;
     width: 96%;
     height: 96%;
     display: grid;
-    grid-template-columns: 5fr 1fr;
     grid-template-rows: 1fr 5fr 5fr;
-    grid-template-areas: 'controladores controladores'
-    'imagem metodo'
-    'grafico grafico';
+    grid-template-columns: 5fr 1fr;
+    grid-template-areas: 
+    'controladores controladores'
+    'sistema enviar'
+    'graficos graficos';
+    gap: 5em;
 }
 
-.controlador{
-    grid-area: controladores;
+.sistema{
+    grid-area: sistema;
+    position: relative;
+    width: 80%;
+    margin: 0% 10%;
+    border-top: 0.5em solid black;
+    border-right: 0.5em solid black;
 }
 
-.imagem{
-    grid-area: imagem;
+.sistema .entrada{
+    border: 0.3em solid black;
+    position: absolute;
+    top: -3em;
+    left: -3em;
+    width: 6em;
+    height: 6em;
+    background-color: white;
 }
 
-.imagem img{
+.sistema .entrada .primeirodiv{
+    border-top: .2em solid black;
+    position: absolute;
+    top: 4.8em;
+    left: 0.8em;
+    width: 2.15em;
+}
+
+.sistema .entrada .segundodiv{
+    border-left: .2em solid black;
+    position: absolute;
+    top: 0.8em;
+    left: 2.8em;
+    height: 4em;
+}
+
+.sistema .entrada .terceirodiv{
+    border-top: .2em solid black;
+    position: absolute;
+    top: 0.8em;
+    left: 2.8em;
+    width: 2em;
+}
+
+.sistema .entrada img{
+    width: 5em;
+    height: 5em;
+}
+
+.sistema .auxiliar{
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 75%;
+    height: 100%;
+    border-bottom: 0.5em solid black;
+    border-left: 0.5em solid black;
+}
+
+.sistema .somador{
+    position: absolute;
+    width: 4em;
+    height: 4em;
+    top: -2em;
+    left: calc(25% - 1.8em);
+    border: 0.5em solid black;
+    border-radius: 50%;
+    background-color: white;
+}
+
+.sistema .somador .mais1{
+    border-right: 0.2em solid black;
+    height: 1em;
+    position: absolute;
+    top: calc(50% - .6em);
+    left: 0.7em;
+}
+
+.sistema .somador .mais2{
+    border-bottom: 0.2em solid black;
+    width: 1em;
+    position: absolute;
+    top: calc(50% - .2em);
+    left: 0.3em;
+}
+
+.sistema .somador .menos{
+    border-bottom: 0.2em solid black;
+    width: 1em;
+    position: absolute;
+    bottom: 0.3em;
+    left: calc(50% - .5em);
+}
+
+.sistema .funcao{
+    position: absolute;
+    border: 0.3em solid black;
+    width: 15%;
+    height: 6em;
+    top: -3em;
+    right: 15%;
+    background-color: white;
+}
+
+.sistema .controlador{
+    position: absolute;
+    border: 0.3em solid black;
+    width: 15%;
+    height: 6em;
+    top: -3em;
+    right: 45%;
+    background-color: white;
+}
+
+button{
+    background-color: transparent;
     width: 100%;
     height: 100%;
+    font-size: 3em;
 }
 
-.metodo{
-    grid-area: metodo;
-    display: flex;
-    flex-direction: column;
-    gap: 2%;
+.funcaoAberta{
+    position: absolute;
+    top: 25%;
+    left: 37.5%;
+    background-color: white;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    padding: 3em;
+    background-color: gray;
+    gap: 1em;
+    display: none;
 }
 
-.graficos{
-    grid-area: grafico;
+.funcaoAberta span{
+    grid-column-start: 1;
+    grid-column-end: 3;
+    font-size: 2em;
 }
+
+.controladorAberto{
+    position: absolute;
+    top: 25%;
+    left: 37.5%;
+    background-color: white;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    padding: 3em;
+    background-color: gray;
+    gap: 1em;
+    display: none;
+}
+
+.controladorAberto span{
+    grid-column-start: 1;
+    grid-column-end: 3;
+    font-size: 2em;
+}
+
+.enviar{
+    grid-area: enviar;
+}
+
+a{
+    padding: 10px;
+    text-decoration: none;
+    color: black;
+    background-color: bisque;
+}
+
+.atual{
+    color: white;
+    background-color: black;
+}
+
