--- a/TFCSD/PID/static/styles/controlador.css
+++ b/TFCSD/PID/static/styles/controlador.css
@@ -7,27 +7,27 @@
 body{
     width: 100%;
     height: 100vh;
+    background-color:white;
 }
 
 .container{
-    padding: 2%;
+    padding: 5% 5% 20% 5%;
     width: 96%;
     height: 96%;
     display: grid;
-    grid-template-rows: 1fr 5fr 5fr;
-    grid-template-columns: 5fr 1fr;
+    grid-template-rows: 1fr 5fr;
     grid-template-areas: 
-    'controladores controladores'
-    'sistema enviar'
-    'graficos graficos';
-    gap: 5em;
+    'controladores'
+    'sistema';
+    row-gap: 15%;
 }
 
 .sistema{
     grid-area: sistema;
     position: relative;
     width: 80%;
-    margin: 0% 10%;
+    height: 80%;
+    margin: 10% 10% 10% 5%;
     border-top: 0.3em solid black;
     border-right: 0.3em solid black;
 }
@@ -37,7 +37,7 @@ body{
     position: absolute;
     top: -17.5%;
     left: -5%;
-    width: 10%;
+    width: 8%;
     height: 35%;
     background-color: white;
 }
@@ -70,7 +70,7 @@ body{
     position: absolute;
     right: 0;
     top: 0;
-    width: 75%;
+    width: 80%;
     height: 100%;
     border-bottom: 0.3em solid black;
     border-left: 0.3em solid black;
@@ -78,10 +78,10 @@ body{
 
 .sistema .somador{
     position: absolute;
-    width: 4vw;
-    height: 4vw;
-    top: -2vw;
-    left: calc(25% - 2vw);
+    width: 3vw;
+    height: 3vw;
+    top: -1.5vw;
+    left: calc(20% - 1.5vw);
     border: 0.3em solid black;
     border-radius: 50%;
     background-color: white;
@@ -133,6 +133,34 @@ body{
     cursor: pointer;
 }
 
+.sistema .ligacao{
+    border-top: 0.3em solid black;
+    position: absolute;
+    top: -.25em;
+    left: 100%;
+    width: 20%;
+}
+
+.sistema .scope{
+    position: absolute;
+    left: 114%;
+    top: -20%;
+    width: 6%;
+    height: 40%;
+    border: 0.3em solid black;
+    background-color: white;
+}
+
+.sistema .scope .visor{
+    position: inherit;
+    width: 80%;
+    height: 25%;
+    left: 10%;
+    top: 10%;
+    border: 0.2em solid black;
+    pointer-events: none;
+}
+
 button{
     background-color: transparent;
     width: 100%;
@@ -144,54 +172,143 @@ button{
 .funcaoAberta{
     position: absolute;
     top: 25%;
-    left: 37.5%;
+    left: 50%;
+    width: 20%;
     background-color: white;
     display: grid;
-    grid-template-columns: 1fr 3fr;
-    padding: 3em;
-    background-color: gray;
-    gap: 1em;
+    grid-template-columns: 1fr 5fr 1fr;
     display: none;
+    border: 1px solid black;
 }
 
-.funcaoAberta span{
+.funcaoAberta .titulo{
     grid-column-start: 1;
     grid-column-end: 3;
-    font-size: 2em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: large;
+    font-weight: bold;
+    border-bottom: 1px solid black;
+    padding: 8px;
+}
+
+.funcaoAberta .fechar{    
+    border-left: 1px solid black;
+    border-bottom: 1px solid black;
+}
+
+.funcaoAberta .fechar button{
+    font-size: medium;
+    border: none;
+}
+
+.funcaoAberta label{
+    padding: 16px;
+}
+
+.funcaoAberta input{
+    margin: 16px;
+    grid-column-start: 2;
+    grid-column-end: 4;
 }
 
 .controladorAberto{
     position: absolute;
     top: 25%;
-    left: 37.5%;
+    left: 25%;
+    width: 20%;
     background-color: white;
     display: grid;
-    grid-template-columns: 1fr 3fr;
-    padding: 3em;
-    background-color: gray;
-    gap: 1em;
+    grid-template-columns: 1fr 5fr 1fr;
     display: none;
+    border: 1px solid black;
 }
 
-.controladorAberto span{
+.controladorAberto .titulo{
     grid-column-start: 1;
     grid-column-end: 3;
-    font-size: 2em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: large;
+    font-weight: bold;
+    border-bottom: 1px solid black;
+    padding: 8px;
+    cursor: grab;
 }
 
-.enviar{
-    grid-area: enviar;
+.controladorAberto .fechar{
+    border-left: 1px solid black;
+    border-bottom: 1px solid black;
+}
+
+.controladorAberto .fechar button{
+    font-size: medium;
+    border: none;
+}
+
+.controladorAberto label{
+    padding: 16px;
+}
+
+.controladorAberto input{
+    margin: 16px;
+    grid-column-start: 2;
+    grid-column-end: 4;
 }
 
 a{
     padding: 10px;
     text-decoration: none;
     color: black;
-    background-color: bisque;
+    border: 1px solid black;
+    border-radius: 1%;
+    background-color:bisque;
+    cursor: pointer;
 }
 
 .atual{
     color: white;
     background-color: black;
+    pointer-events: none;
 }
 
+#helpAberto{
+    background-color: white;
+    position: absolute;    
+    top: 15%;
+    left: 25%;
+    width: 40%;
+    border: 1px solid black;
+    display: grid;
+    grid-template-columns: 9fr 1fr;
+    display: none;
+}
+
+#helpAberto .titulo{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: large;
+    font-weight: bold;
+    border-bottom: 1px solid black;
+    padding: 8px;
+    cursor: grab;
+}
+
+#helpAberto .fechar{
+    border-left: 1px solid black;
+    border-bottom: 1px solid black;
+}
+
+#helpAberto .fechar button{
+    font-size: medium;
+    border: none;
+}
+
+#helpAberto article{
+    grid-column-start: 1;
+    grid-column-end: 3;
+    padding: 16px;
+}
